Code/CarpentryWorkshopClient/src/view/scss/CalendarComponent.scss
.ListWork {
  display: flex;
  padding: 16px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border-radius: 56px;
  background: #386641;
}
.buttonAdd {
  display: flex;
  padding: 16px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border-radius: 56px;
  background: #ff8f19;
}
.time-shift {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  align-self: stretch;
  p {
    color: #000;
    font-family: Noto Sans;
    font-size: 20px;
    font-weight: 400;
  }
  .item-time-shift {
    display: flex;
    align-items: flex-start;
    gap: 10px;
  }
}
td {
  text-align: center;
}
.modal-listShift {
  display: flex;
  width: 1455px;
  height: 918px;
  flex-direction: column;
  align-items: flex-start;
  border-radius: 60px;
  background: #f9faf5;
  .head-listShift {
    display: flex;
    padding: 43px 40px;
    justify-content: center;
    align-items: center;
    gap: 10px;
    align-self: stretch;
    background: #3a5a40;
    .text-head {
      display: flex;
      padding-left: 0px;
      justify-content: center;
      align-items: center;
      gap: 10px;
      flex: 1 0 0;
      p {
        color: #fff;
        font-family: Noto Sans;
        font-size: 40px;
        font-weight: 600;
      }
    }
  }
  .body-listShift {
    display: flex;
    padding: 30px 65px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10px;
    flex: 1 0 0;
    align-self: stretch;
    .list-table-all {
      display: flex;
      padding: 0px 30px;
      flex-direction: column;
      align-items: center;
      gap: 10px;
      flex: 1 0 0;
      align-self: stretch;
      border-radius: 40px;
      background: #fff;
      .list-table {
        display: flex;
        padding: 10px 0px;
        flex-direction: column;
        align-items: center;
        gap: 20px;
        align-self: stretch;
        thead {
          display: flex;
          padding: 0px 20px;
          align-items: center;
          gap: 10px;
          align-self: stretch;
          border-bottom: 1px solid #000;
          p {
            color: #000;
            font-family: Noto Sans;
            font-size: 22px;
            font-weight: 800;
          }
          .head1-table {
            display: flex;
            width: 40px;
            flex-direction: column;
            align-items: center;
            gap: 10px;
          }
          .head2-table {
            display: flex;
            padding: 14px 24px;
            align-items: center;
            gap: 10px;
            flex: 1 0 0;
            p {
              flex: 1 0 0;
            }
          }
          .head-fix {
            p {
              text-align: center;
            }
          }
          .head3-table {
            display: flex;
            width: 160px;
            align-items: center;
            gap: 10px;
            align-self: stretch;
            p {
              text-align: center;
              display: flex;
              width: 156px;
              flex-direction: column;
              justify-content: center;
              flex-shrink: 0;
              align-self: stretch;
            }
          }
        }
        tbody {
          display: flex;
          flex-direction: column;
          align-items: center;
          gap: 20px;
          align-self: stretch;
          max-height: 600px !important;
          tr {
            display: flex;
            padding: 10px 20px;
            align-items: center;
            gap: 10px;
            align-self: stretch;
            border-radius: 30px;
            background: #e9e9e9;
            p {
              color: #000;
              font-family: Noto Sans;
              font-size: 22px;
              font-weight: 400;
            }
            .item1 {
              display: flex;
              width: 40px;
              flex-direction: column;
              justify-content: center;
              align-items: center;
              gap: 10px;
              align-self: stretch;
              border-radius: 60px;
              border: 1px solid #f9f9f9;
            }
            .item2 {
              display: flex;
              padding: 14px 24px;
              align-items: center;
              gap: 10px;
              flex: 1 0 0;
              border-radius: 60px;
              border: 1px solid #fbfbfb;
              p {
                flex: 1 0 0;
              }
            }
            .item3 {
              display: flex;
              padding: 12px 0px;
              justify-content: center;
              align-items: center;
              gap: 20px;
              flex: 1 0 0;
              align-self: stretch;
              border-radius: 60px;
              border: 1px solid #fff;
            }
            .item4 {
              display: flex;
              width: 160px;
              justify-content: center;
              align-items: center;
              gap: 10px;
              align-self: stretch;
              border-radius: 60px;
              border: 1px solid #fff;
            }
          }
        }
      }
    }
  }
}

.modal-detail-all {
  display: flex;
  width: 837px;
  flex-direction: column;
  align-items: flex-start;
  gap: 30px;
  border-radius: 60px;
  background: #fff;
  .head-modal {
    display: flex;
    padding: 36px 0px;
    justify-content: center;
    align-items: center;
    gap: 10px;
    align-self: stretch;
    background: #3a5a40;
    p {
      color: #fff;
      font-family: Noto Sans;
      font-size: 40px;
      font-weight: 600;
    }
  }
  .body-modal {
    display: flex;
    padding: 0px 30px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 26px;
    align-self: stretch;

    .item-modal {
      display: flex;
      align-items: center;
      gap: 10px;
      align-self: stretch;
      p {
        color: #000;
        font-family: Noto Sans;
        font-size: 22px;
        font-weight: 400;
        flex: 1 0 0;
      }
      .item-right {
        display: flex;
        padding: 14px 24px;
        align-items: center;
        gap: 10px;
        flex: 1 0 0;
        border-radius: 60px;
        border: 1px solid #e6e5ea;
      }
    }
  }
}
.modal-shift {
  position: absolute;
  top: 100px;
  right: 400px;
}
.footer-modal {
  display: flex;
  padding: 20px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  align-self: stretch;
  .back {
    display: flex;
    padding: 14px 55px 17px 64px;
    justify-content: flex-end;
    align-items: center;
    border-radius: 20px;
    background: #c5c5c5;
    color: #fff;
    font-family: Noto Sans;
    font-size: 21px;
    font-weight: 400;
  }
  .edit {
    display: flex;
    width: 199px;
    padding: 15px 0px 16px 0px;
    justify-content: center;
    align-items: center;
    border-radius: 20px;
    background: #ff8f19;
    color: #fff;
    text-align: center;
    font-family: Noto Sans;
    font-size: 21px;
    font-weight: 400;
  }
  .save {
    border-radius: 20px;
    background: #1967ff;
  }
}

